[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unfuncaptcha_bda"
version = "0.0.2"
authors = [{ name = "bc", email = "no@dont.email.me" }]
description = "View, edit, and repackage Arkose Labs Funcaptcha fingerprints"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/unfuncaptcha/bda"
Issues = "https://github.com/unfuncaptcha/bda/issues"
